Actualizacion de las imagenes de jpg a png

--- a/PAGINAS/Cultura/TXT/css/fondo-r.css
+++ b/PAGINAS/Cultura/TXT/css/fondo-r.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url(imagenes/RELATOS-F.jpg);
+  background-image: url(imagenes/RELATOS-F.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: inherit;
