--- a/PAGINAS/Cultura/TXT/css/fondo-c.css
+++ b/PAGINAS/Cultura/TXT/css/fondo-c.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url(imagenes/CINE-F.jpg);
+  background-image: url(imagenes/CINE-F.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: inherit;
