--- a/PAGINAS/Cultura/TXT/css/fondo.css
+++ b/PAGINAS/Cultura/TXT/css/fondo.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url(../../fondo.png);
+  background-image: url(https://i.pinimg.com/564x/59/13/2f/59132f91fcfd5a34a7dce33dd890da56.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: inherit;
