Optimizacion de Imagenes Parte1

--- a/PAGINAS/Cultura/TXT/css/fondo-c.css
+++ b/PAGINAS/Cultura/TXT/css/fondo-c.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url(imagenes/CINE-F.png);
+  background-image: url(https://i.pinimg.com/564x/62/51/1a/62511a70aea49922cee4280a7a48d62e.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: inherit;
