--- a/PAGINAS/Cultura/TXT/css/r-fondo-c.css
+++ b/PAGINAS/Cultura/TXT/css/r-fondo-c.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url(imagenes/R-CINE.png);
+  background-image: url(https://i.pinimg.com/564x/41/23/a7/4123a7a8ad2b29408026b6d49f08c2db.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: inherit;
