--- a/PAGINAS/Cultura/TXT/css/fondo-m.css
+++ b/PAGINAS/Cultura/TXT/css/fondo-m.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url(imagenes/MUSICA-F.png);
+  background-image: url(https://i.pinimg.com/564x/34/fe/4e/34fe4e6b288718f3e7bba4aee798b5a5.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: inherit;
