--- a/PAGINAS/Cultura/TXT/css/fondo.css
+++ b/PAGINAS/Cultura/TXT/css/fondo.css
@@ -1,8 +1,9 @@
 body{
-  background-image: url(https://i.pinimg.com/564x/59/13/2f/59132f91fcfd5a34a7dce33dd890da56.jpg);
+  background-image: url(https://i.pinimg.com/originals/52/8f/ba/528fba70bf9ae92b23efc4b64a9688e2.gif);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: inherit;
+  background-color: black;
 }
 
 H1{
@@ -66,23 +67,21 @@ div img{
   float: left;
 }
 
-.Temas{
-  position: absolute;
-  top: 1300px;
-  left: 155px;
-  right: 155px;
-  white:100%;
+.NTemas {
+ position:  absolute;
+ top: 85%;
+ left: 15%;
+ right: 15%;
+white:100%;
 }
-
-
-.Temas-r{
+.NTemas-r{
   position:  absolute;
-  top: 1900px;
-  left: 320px;
-  right: 320px;
+  top: 95%;
+  left: 20%;
+  right: 20%;
   white:100%;
 }
-
+/*
 .NTemas {
  position:  absolute;
  top: 1300px;
@@ -97,7 +96,7 @@ white:100%;
   right: 320px;
   white:100%;
 }
-
+*/
 
 .Contenido .Navegador , .Secciones , .Temas , .Temas-r , .NTemas , .NTemas-r{
   white:100%;
