--- a/PAGINAS/Cultura/TXT/css/fondo.css
+++ b/PAGINAS/Cultura/TXT/css/fondo.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url(https://i.pinimg.com/originals/52/8f/ba/528fba70bf9ae92b23efc4b64a9688e2.gif);
+  background-image: url(FONDO.gif);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: inherit;
@@ -38,38 +38,40 @@ H1{
 }
 
 div p {
-  top: 2000px;
   color:white;
 }
 
 div h2 {
-  top: 2000px;
   color:white;
 }
 
 div A {
-  top: 2000px;
   color:white;
 }
 
-.Secciones {
-  position: relative;
-  top: 1000px;
-  width: 300px;
-  height: 25px;
+.Secciones h2{
+  position: absolute;
+  top: 170%;
+  left:41%;
   text-align: center;
 }
+
+.Secciones p{
+  position: absolute;
+  top: 180%;
+  left:31%;
+  text-align: center;
+}
+
+
 div img{
-  width: 300px;
-  height: 500px;
-  left: 10PX;
   padding: 15px;
   float: left;
 }
 
 .NTemas {
  position:  absolute;
- top: 250%;
+ top: 210%;
  left: 10%;
  right: 10%;
 white:100%;
