--- a/PAGINAS/Cultura/TXT/css/fondo-Res.css
+++ b/PAGINAS/Cultura/TXT/css/fondo-Res.css
@@ -1,6 +1,87 @@
 
 @media screen  and (max-width:500px) {
 
+  .Navegador ul li p{
+    color: white;
+    padding: 7px 2px 7px 2px;
+  }
+  .Navegador ul li A{
+    color: white;
+    padding: 7px 2px 7px 2px;
+    text-decoration:none;
+    display: block;
+  }
+  .Navegador li ul{
+    display: none;
+    position: absolute;
+    max-width: 140px;
+  }
+  .Navegador li ul li {
+    margin: 10px 235px 0px 235px;
+  }
+  .Navegador li:hover > ul {
+    display: block;
+  }
+  .Navegador li{
+    list-style: none;
+    display: block;
+    margin: 0px 3px 10px 9px;
+    text-align: center;
+  }
+
+
+/*-------------------------*/
+.Navegador{
+  position: absolute;
+  width: 250px;
+  height: 65%;
+  background-color: #332B2B;
+  color: #333;
+}
+.Navegador ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.Navegador a {
+  display: block;
+  color: #fff;
+  text-decoration: none;
+  padding: 10px;
+}
+.Navegador h2 {
+  text-align: center;
+  margin: 0;
+  padding: 10px;
+  background: #2a2a2a;
+}
+.Navegador li {
+  border: 1px solid #2a2a2a;
+  transition: border 0.3s;
+  transition-property: border;
+  transition-duration: 0.3;
+}
+.Navegador ul li ul li {
+
+  background-color:#332B2B;
+  color: #fff;
+  display: block;
+}
+
+.Navegador li:hover {
+  background: #444;
+  border-left: 5px solid #eee;
+}
+
+.Contenido {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-image: url(https://i.pinimg.com/originals/52/8f/ba/528fba70bf9ae92b23efc4b64a9688e2.gif);
+  padding: 30px;
+}
+
+/* Mensaje de Página*/
   .Secciones h2 {
     position: absolute;
     top: 70%;
@@ -16,7 +97,7 @@
     right: 5%;
     text-align: center;
   }
-
+/* Secciones de los Titulos*/
   div img{
     left: 10PX;
     padding: 15px;
