--- a/PAGINAS/Cultura/TXT/css/fondo.css
+++ b/PAGINAS/Cultura/TXT/css/fondo.css
@@ -1,10 +1,14 @@
-
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+*{
+  font.font-family: 'Poppins', sans-serif;
+}
 body{
   background-image: url(https://i.pinimg.com/originals/52/8f/ba/528fba70bf9ae92b23efc4b64a9688e2.gif);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: inherit;
   background-color: black;
+
 }
 
 H1{
@@ -36,6 +40,9 @@ H1{
   display: inline-block;
   margin: 60px 30px 0 50px;
   text-align: center;
+}
+.Navegador img{
+  width: 2%;
 }
 
 div p {
@@ -85,7 +92,75 @@ div img{
   top: 300%;
   left: 23%;
   right: 23%;
+}
 
+/*Test*/
+
+.VentanaTest {
+  background: rgba(206, 66, 0, 0.9);
+  width: 50%;
+  color: rgba(255, 0, 0, 0.5);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  text-align: center;
+  padding: 33px;
+  min-height: 250px;
+  border-radius:22px;
+  position:absolute;
+  left: 22%;
+  top: 65%;
+  display: none;
+
+}
+
+#cerrar img {
+  position: absolute;
+  right: 3px;
+}
+#cerrar img {
+  width: 20px;
+}
+
+.testPeliculas {
+  position: absolute;
+  left: 40%;
+  top: 140%;
+  display: inline-block;
+  padding: 12px 36px;
+  margin: 10px;
+  color: #fff;
+  background: rgba(300, 50, 20, 0.5);
+  border-radius: 40px;
+  font-size: 18px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  overflow: hidden;
+}
+
+span
+{
+  position: absolute;
+  background: #fff;
+  transform: translate(-50%,-50%);
+  pointer-events: none;
+  border-radius: 50%;
+  animation: animate 1s linear infinite;
+}
+@keyframes animate
+{
+  0%
+  {
+    width: 0;
+    height: 0;
+    opacity: 0.2;
+  }
+  100%
+  {
+    width: 500px;
+    height: 500px;
+    opacity: 0;
+  }
+}
 
 /*
 .Contenido .Navegador , .Secciones , .Temas , .Temas-r , .NTemas , .NTemas-r{
