--- a/PAGINAS/Cultura/TXT/css/fondo.css
+++ b/PAGINAS/Cultura/TXT/css/fondo.css
@@ -74,7 +74,12 @@ div A {
   text-align: center;
 }
 
-div img{
+.NTemas img{
+  left: 10PX;
+  padding: 15px;
+  float: left;
+}
+.NTemas-r img{
   left: 10PX;
   padding: 15px;
   float: left;
@@ -99,7 +104,7 @@ div img{
 .VentanaTest {
   background: rgba(206, 66, 0, 0.9);
   width: 50%;
-  color: rgba(255, 0, 0, 0.5);
+  color: rgba(241, 230, 230);
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
   text-align: center;
@@ -108,9 +113,15 @@ div img{
   border-radius:22px;
   position:absolute;
   left: 22%;
-  top: 65%;
+  top: 55%;
   display: none;
+}
 
+.VentanaTest img{
+  width: 400px;
+  right: 200px;
+  position: relative;
+  left: 0%;
 }
 
 #cerrar img {
@@ -120,6 +131,30 @@ div img{
 #cerrar img {
   width: 20px;
 }
+#respuestas div{
+  width: 280px;
+  height: 20px;
+  float: left;
+  padding: 10px;
+  margin-left: 10px;
+}
+
+#respuestas input{
+  position: relative;
+  left: 10PX;
+  float: left;
+  margin-left: 20px;
+}
+
+#respuestas label{
+  background: rgba(255, 50, 0, 0.50);
+  position: relative;
+  left: 0PX;
+  width: 240px;
+  padding: 2px;
+}
+
+
 
 .testPeliculas {
   position: absolute;
