--- a/In.css
+++ b/In.css
@@ -91,6 +91,24 @@ body{
   border-radius: 40px;
   text-decoration: none;
   font-size: 30px;
+  cursor: url('P-Gato.png'), default;
+}
+.Comentarios a
+{
+  position: absolute;
+  left: 85%;
+  top: 90%;
+  color: #fff;
+  display: block;
+  padding: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  background: rgba(0, 55, 255, 0.8);
+  border-radius: 40px;
+  text-decoration: none;
+  font-size: 20px;
+  cursor: url('P-Gato.png'), default;
+
 }
 /*Texto*/
 
